[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/World.gd" type="Script" id=1]
[ext_resource path="res://AutoTile.tres" type="TileSet" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Player/Runner.tres" type="SpriteFrames" id=4]
[ext_resource path="res://Sprites/Player/AxeRight1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/AxeRight2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/AxeRight3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/AxeRight4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/TorchRight1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/TorchRight2.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/TorchRight3.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/TorchRight4.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Player/ChainsawRight1.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Player/ChainsawRight2.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Player/ChainsawRight3.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Player/ChainsawRight4.png" type="Texture" id=16]
[ext_resource path="res://Fonts/PICO8.tres" type="DynamicFont" id=17]
[ext_resource path="res://Tiles/VegetationTiles.tres" type="TileSet" id=18]
[ext_resource path="res://Tiles/ItemTiles.tres" type="TileSet" id=19]
[ext_resource path="res://Scripts/ItemHolder.gd" type="Script" id=20]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Axe",
"speed": 10.5
}, {
"frames": [  ],
"loop": true,
"name": "None",
"speed": 10.5
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "Torch",
"speed": 10.5
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "Chainsaw",
"speed": 10.5
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 1.0
extents = Vector2( 10, 10 )
_sections_unfolded = [ "Resource" ]

[node name="World" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Ground" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -4, 0, 1, -3, 0, 65536, -2, 0, 65536, -1, 0, 65536, -65536, 0, 65536, -65535, 0, 65536, -65534, 0, 2, 65521, 0, 196608, 65522, 0, 196609, 65523, 0, 196609, 65524, 0, 196609, 65525, 0, 196609, 65526, 0, 196609, 65527, 0, 196609, 65528, 0, 196609, 65529, 0, 196609, 65530, 0, 196609, 65531, 0, 196609, 65532, 0, 196614, 65533, 0, 196619, 65534, 0, 196619, 65535, 0, 196619, 0, 0, 196619, 1, 0, 196619, 2, 0, 196615, 3, 0, 196609, 4, 0, 196609, 5, 0, 196609, 6, 0, 196609, 7, 0, 196609, 8, 0, 196609, 9, 0, 196609, 10, 0, 196609, 11, 0, 196609, 12, 0, 196609, 13, 0, 196610, 131068, 0, 65537, 131069, 0, 131072, 131070, 0, 131072, 131071, 0, 131072, 65536, 0, 131072, 65537, 0, 131072, 65538, 0, 65538, 65539, 2, 196613 )
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Player" type="KinematicBody2D" parent="." index="1"]

editor/display_folded = true
position = Vector2( -8, 8 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
sticks = 0
wood = 0
coal = 0
planks = 0

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player" index="0"]

frames = ExtResource( 4 )
animation = "Right"
frame = 2
playing = true

[node name="Tool" type="AnimatedSprite" parent="Player/AnimatedSprite" index="0"]

frames = SubResource( 1 )
animation = "Axe"
frame = 2
playing = true

[node name="Camera2D" type="Camera2D" parent="Player" index="1"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="WalkTimer" type="Timer" parent="Player" index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Label" type="Label" parent="Player" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -96.0
margin_top = -64.0
margin_right = 96.0
margin_bottom = -8.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0.921875, 1, 0, 1 )
text = "0"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="CraftText" type="Label" parent="Player" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -96.0
margin_top = -64.0
margin_right = 16.0
margin_bottom = -8.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="ChopSound" type="AudioStreamPlayer" parent="Player" index="5"]

stream = null
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Area2D" type="Area2D" parent="Player" index="6"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D" index="0"]

shape = SubResource( 2 )
_sections_unfolded = [ "Pause" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Player" index="7"]

stream = null
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Sprite" type="Sprite" parent="Player" index="8"]

visible = false

[node name="Vegetation" type="TileMap" parent="." index="2"]

mode = 0
tile_set = ExtResource( 18 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0 )
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Animals" type="TileMap" parent="." index="3"]

mode = 0
tile_set = null
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
__meta__ = {
"_edit_lock_": true
}

[node name="Items" type="TileMap" parent="." index="4"]

mode = 0
tile_set = ExtResource( 19 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ItemHolder" type="Node" parent="." index="5"]

script = ExtResource( 20 )

[connection signal="timeout" from="Player/WalkTimer" to="Player" method="_on_WalkTimer_timeout"]


